Bug 417419: You too can solve global-warming without making the JS_INLINE macro ugly. r=/a=brendan